# dat-score

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  REVERSE_PROXY.md  TESTING.md  docker-compose.proxy.yml  docker-compose.yml  main.py  nginx.conf  nginx.conf.example  prod_config.py  pyproject.toml  run_tests.py  test_main.py
.github/: copilot-instructions.md
.github/workflows/: python-app.yml  tests.yml
static/: dat_score_app.css
