[project]
name = "dat-score"
version = "0.1.0"
description = "Creativity score calculation using the Divergent Association Task (DAT) and GloVe vectors."
authors = [
    {name = "chpeer",email = "19874293+chpeer@users.noreply.github.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
"numpy (>=2.2.6,<3.0.0)",
"scipy (>=1.15.3,<2.0.0)",
"divergent-association-task @ git+https://github.com/chpeer/divergent-association-task.git"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
